[gd_scene load_steps=2 format=2]

[ext_resource path="res://Menus/StartMenu.gd" type="Script" id=1]

[node name="StartMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 118.0
margin_top = 56.0
margin_right = 202.0
margin_bottom = 124.0

[node name="StartButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_right = 84.0
margin_bottom = 20.0
text = "New Game"

[node name="LoadButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 84.0
margin_bottom = 44.0
text = "Load Game"

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 84.0
margin_bottom = 68.0
text = "Quit"

[connection signal="pressed" from="CenterContainer/VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/LoadButton" to="." method="_on_LoadButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
